VR-creating laser beam

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ArcituctureExplorer/Content/ArchVizAsset/
 ArcituctureExplorer/Config/
 ArcituctureExplorer/Content/Assets/
+ArcituctureExplorer/Content/Downtown/
+ArcituctureExplorer/Content/IndustrialCity/
