VR-Adding Grabbing code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ ArcituctureExplorer/Config/
 ArcituctureExplorer/Content/Assets/
 ArcituctureExplorer/Content/Downtown/
 ArcituctureExplorer/Content/IndustrialCity/
+ArcituctureExplorer/Content/MigratedBlueprint/
+ArcituctureExplorer/Content/VirtualReality/
+ArcituctureExplorer/Content/VirtualRealityBP/
+ArcituctureExplorer/Content/Geometry/
